# python_artnet

./: README.md  main.py  pyproject.toml  setup.py
.github/workflows/: publishToPypi.yml
python_artnet/: __init__.py  python_artnet.py
samples/: exampleReceiver.py
tests/: issue3.py
