[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python_artnet"
authors = [
    {name = "sciencegey"}
]
maintainers = [
    {name = "sciencegey"}
]
description = "Easy-to-use and simple python receiver for Art-Net (that also implements device polling)."
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["Art-Net", "ArtNet", "DMX", "Lighting", "Lighting Control"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",

    "Topic :: Software :: Libraries :: Python Modules",
    "Topic :: Artistic Software",
    "Topic :: Multimedia",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sciencegey/python_artnet"
Repository = "https://github.com/sciencegey/python_artnet.git"
Issues = "https://github.com/sciencegey/python_artnet/issues"

[tools.setuptools.dynamic]
version = {attr = "python_artnet.__version__"}